# awake

./: .gitignore  CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build-and-publish.yml
awake-core/: build.gradle.kts
awake-demo/.run/: desktopApp.run.xml  iosApp.run.xml
awake-demo/androidApp/: build.gradle.kts
awake-demo/desktopApp/: build.gradle.kts
awake-demo/shared/: build.gradle.kts  shared.podspec
awake-vulkan/: build.gradle.kts
awake-vulkan-generator/: build.gradle.kts
awake-vulkan/src/main/cpp/: CMakeLists.txt  awake-vulkan.cpp
awake-vulkan/src/main/cpp/common/utils/: CMakeLists.txt  VkApplicationInfoAccessor.cpp  VkAttachmentDescriptionAccessor.cpp  VkAttachmentReferenceAccessor.cpp  VkDeviceCreateInfoAccessor.cpp  VkDeviceCreateInfoConverter.cpp  VkDeviceCreateInfoConverter.h  VkDeviceQueueCreateInfoAccessor.cpp  VkDeviceQueueCreateInfoConverter.cpp  VkDeviceQueueCreateInfoConverter.h  VkExtent2DAccessor.cpp  VkExtent2DConverter.h  VkGraphicsPipelineCreateInfoAccessor.cpp  VkGraphicsPipelineCreateInfoConverter.cpp  VkGraphicsPipelineCreateInfoConverter.h  VkImageViewCreateInfoConverter.h  VkOffset2DAccessor.cpp  VkPhysicalDeviceFeaturesAccessor.cpp  VkPhysicalDeviceFeaturesConverter.cpp  VkPhysicalDeviceFeaturesConverter.h  VkPhysicalDeviceFeaturesMutator.cpp  VkPipelineCacheCreateInfoAccessor.cpp  VkPipelineColorBlendAttachmentStateAccessor.cpp  VkPipelineColorBlendStateCreateInfoAccessor.cpp  VkPipelineDepthStencilStateCreateInfoAccessor.cpp  VkPipelineDynamicStateCreateInfoAccessor.cpp  VkPipelineInputAssemblyStateCreateInfoAccessor.cpp  VkPipelineLayoutCreateInfoAccessor.cpp  VkPipelineMultisampleStateCreateInfoAccessor.cpp  VkPipelineRasterizationStateCreateInfoAccessor.cpp  VkPipelineShaderStageCreateInfoAccessor.cpp  VkPipelineShaderStageCreateInfoConverter.cpp  VkPipelineShaderStageCreateInfoConverter.h  VkPipelineTessellationStateCreateInfoAccessor.cpp  VkPipelineVertexInputStateCreateInfoAccessor.cpp  VkPipelineViewportStateCreateInfoAccessor.cpp  VkPushConstantRangeAccessor.cpp  VkRect2DAccessor.cpp  VkRenderPassCreateInfoAccessor.cpp  VkShaderModuleCreateInfoConverter.cpp  (+15 more)
awake-vulkan/src/main/cpp/common/utils/includes/: VkDeviceQueueCreateInfoAccessor.h  VkGraphicsPipelineCreateInfoAccessor.h  VkOffset2DAccessor.h  VkPipelineColorBlendAttachmentStateAccessor.h  VkPipelineDepthStencilStateCreateInfoAccessor.h  VkPipelineDynamicStateCreateInfoAccessor.h  VkPipelineMultisampleStateCreateInfoAccessor.h  VkPipelineShaderStageCreateInfoAccessor.h  VkPipelineTessellationStateCreateInfoAccessor.h  VkRect2DAccessor.h  VkRenderPassCreateInfoAccessor.h  VkSpecializationMapEntryAccessor.h  VkVertexInputAttributeDescriptionAccessor.h  VkVertexInputBindingDescriptionAccessor.h  VkViewportAccessor.h
awake-vulkan/src/main/cpp/vulkan-kotlin/: CMakeLists.txt  Float32Accessor.cpp  Int32Accessor.cpp  UInt32Accessor.cpp  VkAndroidSurfaceCreateInfoKHRAccessor.cpp  VkApplicationInfoAccessor.cpp  VkAttachmentDescriptionAccessor.cpp  VkAttachmentReferenceAccessor.cpp  VkClearColorValueAccessor.cpp  VkClearDepthStencilValueAccessor.cpp  VkCommandBufferAllocateInfoAccessor.cpp  VkCommandBufferBeginInfoAccessor.cpp  VkCommandBufferInheritanceInfoAccessor.cpp  VkCommandPoolCreateInfoAccessor.cpp  VkComponentMappingAccessor.cpp  VkDebugUtilsLabelEXTAccessor.cpp  VkDebugUtilsLabelEXTMutator.cpp  VkDebugUtilsMessengerCallbackDataEXTAccessor.cpp  VkDebugUtilsMessengerCallbackDataEXTMutator.cpp  VkDebugUtilsMessengerCreateInfoEXTAccessor.cpp  VkDebugUtilsObjectNameInfoEXTAccessor.cpp  VkDebugUtilsObjectNameInfoEXTMutator.cpp  VkDeviceCreateInfoAccessor.cpp  VkDeviceQueueCreateInfoAccessor.cpp  VkExtensionPropertiesAccessor.cpp  VkExtensionPropertiesMutator.cpp  VkExtent2DAccessor.cpp  VkExtent2DConverter.cpp  VkExtent2DMutator.cpp  VkExtent3DAccessor.cpp  VkExtent3DMutator.cpp  VkFenceCreateInfoAccessor.cpp  VkFramebufferCreateInfoAccessor.cpp  VkGraphicsPipelineCreateInfoAccessor.cpp  VkImageSubresourceRangeAccessor.cpp  VkImageViewCreateInfoAccessor.cpp  VkImageViewCreateInfoConverter.cpp  VkInstanceCreateInfoAccessor.cpp  VkLayerPropertiesAccessor.cpp  VkLayerPropertiesMutator.cpp  (+55 more)
awake-vulkan/src/main/cpp/vulkan-kotlin/includes/: Float32Accessor.h  Int32Accessor.h  UInt32Accessor.h  VkAndroidSurfaceCreateInfoKHRAccessor.h  VkApplicationInfoAccessor.h  VkAttachmentDescriptionAccessor.h  VkAttachmentReferenceAccessor.h  VkClearColorValueAccessor.h  VkClearDepthStencilValueAccessor.h  VkCommandBufferAllocateInfoAccessor.h  VkCommandBufferBeginInfoAccessor.h  VkCommandBufferInheritanceInfoAccessor.h  VkCommandPoolCreateInfoAccessor.h  VkComponentMappingAccessor.h  VkDebugUtilsLabelEXTAccessor.h  VkDebugUtilsLabelEXTMutator.h  VkDebugUtilsMessengerCallbackDataEXTAccessor.h  VkDebugUtilsMessengerCallbackDataEXTMutator.h  VkDebugUtilsMessengerCreateInfoEXTAccessor.h  VkDebugUtilsObjectNameInfoEXTAccessor.h  VkDebugUtilsObjectNameInfoEXTMutator.h  VkDeviceCreateInfoAccessor.h  VkDeviceQueueCreateInfoAccessor.h  VkExtensionPropertiesAccessor.h  VkExtensionPropertiesMutator.h  VkExtent2DAccessor.h  VkExtent2DMutator.h  VkExtent3DAccessor.h  VkExtent3DMutator.h  VkFenceCreateInfoAccessor.h  VkFramebufferCreateInfoAccessor.h  VkGraphicsPipelineCreateInfoAccessor.h  VkImageSubresourceRangeAccessor.h  VkImageViewCreateInfoAccessor.h  VkInstanceCreateInfoAccessor.h  VkLayerPropertiesAccessor.h  VkLayerPropertiesMutator.h  VkOffset2DAccessor.h  VkPhysicalDeviceFeaturesAccessor.h  VkPhysicalDeviceFeaturesMutator.h  (+43 more)
awakeCore/: build.gradle.kts
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: Dependecies.kt  convention.publication.gradle.kts  glslangvalidator-conventions.gradle.kts  signing-publication-conventions.gradle.kts
config/detekt/: detekt.yml
desktopApp/: build.gradle.kts
desktopApp/src/jvmMain/kotlin/: main.kt
shared/: build.gradle.kts
shared/src/androidMain/kotlin/: AwakeCanvas.kt
shared/src/commonMain/kotlin/: App.kt
shared/src/desktopMain/kotlin/: main.desktop.kt
(+321 files in other folders)
