# vulkan-kotlin/CMakeLists.txt

set(VULKAN_KOTLIN_SOURCES
        VkAttachmentDescriptionAccessor.cpp
        VkExtent2DMutator.cpp
        VkDeviceQueueCreateInfoAccessor.cpp
        VkDebugUtilsLabelEXTMutator.cpp
        VkPhysicalDeviceSparsePropertiesMutator.cpp
        VkOffset2DAccessor.cpp
        VkSurfaceFormatKHRMutator.cpp
        VkPhysicalDeviceFeaturesMutator.cpp
        VkImageSubresourceRangeAccessor.cpp
        VkDebugUtilsObjectNameInfoEXTMutator.cpp
        VkClearDepthStencilValueAccessor.cpp
        VkPhysicalDevicePropertiesAccessor.cpp
        VkRect2DAccessor.cpp
        VkDeviceCreateInfoAccessor.cpp
        VkRenderPassBeginInfoAccessor.cpp
        VkPhysicalDeviceSparsePropertiesAccessor.cpp
        VkDebugUtilsMessengerCallbackDataEXTMutator.cpp
        VkSurfaceFormatKHRAccessor.cpp
        VkCommandBufferInheritanceInfoAccessor.cpp
        VkCommandBufferBeginInfoAccessor.cpp
        VkSpecializationMapEntryAccessor.cpp
        VkAndroidSurfaceCreateInfoKHRAccessor.cpp
        VkPipelineColorBlendAttachmentStateAccessor.cpp
        VkDebugUtilsObjectNameInfoEXTAccessor.cpp
        VkInstanceCreateInfoAccessor.cpp
        VkDebugUtilsLabelEXTAccessor.cpp
        VkExtensionPropertiesAccessor.cpp
        VkSubpassDependencyAccessor.cpp
        VkLayerPropertiesAccessor.cpp
        VkPipelineColorBlendStateCreateInfoAccessor.cpp
        VkPhysicalDeviceFeaturesAccessor.cpp
        VkPipelineTessellationStateCreateInfoAccessor.cpp
        VkDebugUtilsMessengerCallbackDataEXTAccessor.cpp
        enum_utils.cpp
        VulkanUtils.cpp
        Int32Accessor.cpp
        VkSubpassDescriptionAccessor.cpp
        VkPhysicalDeviceLimitsAccessor.cpp
        VkDebugUtilsMessengerCreateInfoEXTAccessor.cpp
        VkPhysicalDeviceLimitsMutator.cpp
        VkPipelineLayoutCreateInfoAccessor.cpp
        VkCommandBufferAllocateInfoAccessor.cpp
        VkShaderModuleCreateInfoAccessor.cpp
        VkPipelineInputAssemblyStateCreateInfoAccessor.cpp
        VkSwapchainCreateInfoKHRAccessor.cpp
        VkGraphicsPipelineCreateInfoAccessor.cpp
        VkComponentMappingAccessor.cpp
        VkPushConstantRangeAccessor.cpp
        VkAttachmentReferenceAccessor.cpp
        VkSpecializationInfoAccessor.cpp
        Float32Accessor.cpp
        VkVertexInputAttributeDescriptionAccessor.cpp
        VkPipelineShaderStageCreateInfoAccessor.cpp
        VkPipelineViewportStateCreateInfoAccessor.cpp
        VkCommandPoolCreateInfoAccessor.cpp
        VkPipelineDepthStencilStateCreateInfoAccessor.cpp
        VkExtent3DMutator.cpp
        VkPipelineCacheCreateInfoAccessor.cpp
        VkLayerPropertiesMutator.cpp
        VkPipelineDynamicStateCreateInfoAccessor.cpp
        VkApplicationInfoAccessor.cpp
        VkVertexInputBindingDescriptionAccessor.cpp
        VkClearColorValueAccessor.cpp
        VkExtent2DAccessor.cpp
        VkPipelineVertexInputStateCreateInfoAccessor.cpp
        VkQueueFamilyPropertiesAccessor.cpp
        VkSurfaceCapabilitiesKHRAccessor.cpp
        UInt32Accessor.cpp
        VkSurfaceCapabilitiesKHRMutator.cpp
        VkQueueFamilyPropertiesMutator.cpp
        VkViewportAccessor.cpp
        VkExtent3DAccessor.cpp
        VkExtensionPropertiesMutator.cpp
        VkPipelineRasterizationStateCreateInfoAccessor.cpp
        VkPipelineMultisampleStateCreateInfoAccessor.cpp
        VkFramebufferCreateInfoAccessor.cpp
        VkStencilOpStateAccessor.cpp
        VkRenderPassCreateInfoAccessor.cpp
        VkPhysicalDevicePropertiesMutator.cpp
        VkImageViewCreateInfoAccessor.cpp
        )

# Set the path to your header file directory
include_directories(includes)
add_library(vulkan_kotlin STATIC ${VULKAN_KOTLIN_SOURCES})

target_include_directories(vulkan_kotlin PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
